[tool.poetry]
name = "buscohosting"
version = "0.1.0"
description = ""
authors = ["Victor Martins <vimmasi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.25.0"
fastapi = "^0.105.0"
pydantic = "^2.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
